# CubeUniverse

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.zig  build.zig.zon  compile_shaders.bat  cpp.hint
CubeUniverse/core/: CMakeLists.txt
CubeUniverse/core/cube_core/: core.cpp
CubeUniverse/dependencies/luau-0.603/cmake/: Luau.Analyze.CLI.vcxproj.filters  Luau.Ast.CLI.vcxproj.filters  Luau.Ast.vcxproj.filters  Luau.CodeGen.vcxproj  Luau.Common.vcxproj  Luau.Common.vcxproj.filters  Luau.Conformance.vcxproj.filters  Luau.Reduce.CLI.vcxproj.filters  Luau.sln
CubeUniverse/dependencies/luau-0.603/cmake/Luau.Ast.dir/RelWithDebInfo/: Luau.Ast.lib.recipe
CubeUniverse/dependencies/luau-0.603/cmake/RelWithDebInfo/: Luau.Compiler.lib  Luau.VM.lib
CubeUniverse/dependencies/luau/cmake/: ALL_BUILD.vcxproj  Luau.Analyze.CLI.vcxproj  Luau.Ast.CLI.vcxproj  Luau.CLI.Test.vcxproj.filters  Luau.CodeGen.vcxproj.filters  Luau.Compile.CLI.vcxproj.filters  Luau.Compiler.vcxproj  Luau.Conformance.vcxproj  Luau.UnitTest.vcxproj.filters  Luau.VM.vcxproj.filters  ZERO_CHECK.vcxproj.filters  isocline.vcxproj
CubeUniverse/dependencies/luau/cmake/Luau.Repl.CLI.dir/RelWithDebInfo/: luau.exe.recipe
CubeUniverse/dependencies/luau/cmake/RelWithDebInfo/: Luau.Ast.lib
CubeUniverse/game/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
CubeUniverse/src/: CMakeLists.txt  main.cpp
CubeUniverse/tests/: CMakeLists.txt  test_main.cpp
core/: CMakeLists.txt  core.h
dependencies/gk-types-lib-0.2/gk_types_lib/: test.cpp
dependencies/gk-types-lib-1.0.1/gk_types_lib/job/: job_future.h
dependencies/luau-0.603/cmake/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  Luau.Analysis.vcxproj  Luau.Analysis.vcxproj.filters  Luau.Ast.vcxproj  Luau.CLI.Test.vcxproj  Luau.Compile.CLI.vcxproj  Luau.Compiler.vcxproj.filters  Luau.Config.vcxproj  Luau.Config.vcxproj.filters  Luau.Reduce.CLI.vcxproj  Luau.Repl.CLI.vcxproj  Luau.Repl.CLI.vcxproj.filters  Luau.UnitTest.vcxproj  Luau.VM.vcxproj  ZERO_CHECK.vcxproj  cmake_install.cmake  isocline.vcxproj.filters
dependencies/luau-0.603/cmake/Luau.Analysis.dir/RelWithDebInfo/Luau.Analysis.tlog/: CL.10164.write.1.tlog  CL.command.1.tlog  Cl.items.tlog  Lib.command.1.tlog
dependencies/luau-0.603/cmake/Luau.Analyze.CLI.dir/RelWithDebInfo/: luau-analyze.exe.recipe
dependencies/luau-0.603/cmake/Luau.Analyze.CLI.dir/RelWithDebInfo/Luau.Analyze.CLI.tlog/: Cl.items.tlog  link.command.1.tlog  link.write.1.tlog
dependencies/luau-0.603/cmake/Luau.Ast.dir/RelWithDebInfo/Luau.Ast.tlog/: CL.11748.write.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib.command.1.tlog
dependencies/luau-0.603/cmake/Luau.CodeGen.dir/RelWithDebInfo/Luau.CodeGen.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib.command.1.tlog
dependencies/luau-0.603/cmake/Luau.Compiler.dir/RelWithDebInfo/Luau.Compiler.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib.command.1.tlog
dependencies/luau-0.603/cmake/Luau.Config.dir/RelWithDebInfo/Luau.Config.tlog/: CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
dependencies/luau-0.603/cmake/Luau.Repl.CLI.dir/RelWithDebInfo/Luau.Repl.CLI.tlog/: CL.11396.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog
dependencies/luau-0.603/cmake/Luau.VM.dir/RelWithDebInfo/Luau.VM.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
dependencies/luau-0.603/cmake/RelWithDebInfo/: Luau.Config.lib  isocline.lib
dependencies/luau-0.603/cmake/isocline.dir/RelWithDebInfo/: isocline.lib.recipe
game/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
src/: CMakeLists.txt  clibs.zig  core.h  engine_entry.zig  main.cpp  main.zig  test.cpp  tests.zig
src/assets/: basic.frag  basic.vert  pathtrace.frag  pathtrace.vert  pathtracer.comp  test.comp
src/engine/: Application.zig  Engine.zig  clibs.zig  core.h  engine.cpp  engine.h  engine_entry.cpp  engine_entry.zig  engine_system_tests.zig  engine_unit_test.cpp  engine_unit_tests.zig
src/engine/graphics/: Window.zig  window.cpp  window.h
src/engine/graphics/opengl/: IndexBufferObject.zig  OpenGLInstance.zig  ShaderStorageBufferObject.zig  VertexArrayObject.zig  VertexBufferObject.zig  opengl_instance.cpp  opengl_instance.h  shader.zig
src/engine/graphics/pathtracing/: block_indices.zig
src/engine/graphics/shaders/: simple_shader.frag
src/engine/graphics/vulkan/: Pipeline.zig  SwapChain.zig  VulkanEngine.zig  device.zig  vk_engine.zig
src/engine/script/: isa.txt
src/engine/types/: color.cpp  color.h  job_system.zig  light.cpp  light.h  string.zig  string_simd.cpp
src/engine/world/: world_transform.cpp  world_transform.h  world_transform.zig
src/engine/world/chunk/: BlockStateIndices.zig  Chunk.zig  Inner.zig  block_state_indices.cpp  block_state_indices.h  chunk.cpp  chunk.h
src/engine/world/fat_tree/: FatTree.zig  LoadedChunksHashMap.zig  fat_tree.cpp  fat_tree.h  tree_layer_indices.cpp  tree_layer_indices.h  tree_layer_indices.zig
src/engine/world/n_tree/: LoadedChunksHashMap.zig  NTree.zig
src/shared/: Application.zig
src/shared/engine/: Window.zig
src/shared/engine/math/: vector.zig
src/shared/engine/math/detail/: vector3.zig
src/shared/engine/script/lua/: luajit.zig  test_return_number.lua
src/shared/engine/types/: color.zig  job_system.zig  light.zig
src/shared/engine/vulkan/: Pipeline.zig  device.zig  vk_engine.zig  vk_types.zig
src/shared/world/: NTree.zig  TreeLayerIndices.zig  world_transform.zig
src/shared/world/chunk/: BlockStateIndices.zig  Chunk.zig  Inner.zig  chunk_inner.zig
src/shared/world/n_tree/: ChunkModify.zig  LoadedChunksHashMap.zig  NTree.zig  TreeLayerIndices.zig  TreeModify.zig  tree_layer_indices.zig
src/world/: world_transform.cpp  world_transform.h
src/world/chunk/: chunk.cpp  chunk.h  chunk_data.h
src/world/n_tree/: tree.cpp  tree.h  tree_index.cpp  tree_index.h  tree_layers.cpp  tree_layers.h
tests/: CMakeLists.txt  main.cpp
(+37 files in other folders)
